# libkonio

./: .gitignore  CMakeLists.txt  MyNewFile  README.md  configure.ac  test.sh  ult_print(r); 
examples/: build.sh  reader_cat.c  write_file.c
src/: Makefile.am  konio.h  kutil.h  other.c
src/reader/: reader.c
src/writer/: writer.c
test/: reader.c  writer.c
